--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,9 @@
     html {
         font-family: 'Roboto', sans-serif;
     }
+
+    ul li{
+        list-style-type: disc;
+        list-style-position: inside;
+    }
 }
